# auth

./: Cargo.toml  entries.json  readme.md
man/: auth.1
src/: app_state.rs  main.rs  storage.rs  totp.rs  ui.rs
src/cli/: Cli.cpp
src/core/: Totp.cpp  Totp.hpp  app.rs
src/db/: SecretStorage.cpp  SecretStorage.hpp
src/helpers/: MiscFunctions.cpp  MiscFunctions.hpp
tests/: TotpTests.cpp  path_test.rs
