[package]
name = "auth"
version = "0.1.0"
authors = ["Nyx <nnyyxxxx@protonmail.com>"]
license = "GPL-2.0"
description = "Authenticator app made in rust"
repository = "https://github.com/nnyyxxxx/auth.git"
readme = "readme.md"
keywords = [
    "authenticator",
    "gui",
]
edition = "2021"

[dependencies]
gtk = { version = "0.5", package = "gtk4" }
totp-rs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glib = "0.16"
futures = "0.3"
dirs = "5.0"
base32 = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
